Adds latin font.

--- a/main.tex
+++ b/main.tex
@@ -29,6 +29,7 @@
 
 \usepackage{xepersian}
 \settextfont[Path=fonts/]{Vazir.ttf}
+\setlatintextfont{Times New Roman}
 
 %----------------------------------------------------------------------------------------
 %	TITLE SECTION
