Corrects paragraph creation.

--- a/main.tex
+++ b/main.tex
@@ -58,14 +58,14 @@
 \maketitle % Print the title
 
 \section{پروژه‌ی خوب}
-\paragraph{
+\par
 تعریف یک پروژه‌ی خوب اینجا آمده است، این پروژه‌ی خوب خیلی خوب است.
 خیلی‌ها دوست دارند پروژه‌هایشان با نرم‌افزارهای متن باز تولید شود.
-}
+
 \subsection{زیر تیتر پروژه‌ی خوب}
-\paragraph{
+\par
 پروژه‌ی خوب توسط تدریسیاران خوب تولید می‌شود.
-}
+
 
 \begin{align}
 \begin{split}
