feat: update document with localise version

--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
   ترم={نیم سال دوم ۱۴۰۰ -- ۱۴۰۱},
 }
 
-\begin{document}
+\شروع{نوشتار}
 
 \عنوان‌ساز
 
@@ -20,4 +20,4 @@
 
 \پایان‌ساز
 
-\end{document}
+\پایان{نوشتار}
